--- a/Munyn/Views/Nodes/NodeDetails/NodeDetailsViewProperty.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/NodeDetailsViewProperty.axaml
@@ -9,8 +9,9 @@
 		<StackPanel>
 			<Border Height="1" Background="LightGray" Margin="15,5,15,5"/>
 			<StackPanel Orientation="Horizontal">
-				<TextBox Margin="15,0,0,0" IsVisible="{Binding !IsDefault}" Text="{Binding PropertyName}" Foreground="Black" VerticalAlignment="Center" Background="Transparent" BorderThickness="0"></TextBox>
-				<TextBlock Margin="20,5,0,5" IsVisible="{Binding IsDefault}" Text="{Binding PropertyName}" Foreground="Black" VerticalAlignment="Center"></TextBlock> 
+				<PathIcon Margin="15,2,3,2" Data="{Binding Icon}" Foreground="Black"/>
+				<TextBox IsVisible="{Binding !IsDefault}" Text="{Binding PropertyName}" Foreground="Black" VerticalAlignment="Center" Background="Transparent" BorderThickness="0"></TextBox>
+				<TextBlock Margin="5,5,0,5" IsVisible="{Binding IsDefault}" Text="{Binding PropertyName}" Foreground="Black" VerticalAlignment="Center"></TextBlock> 
 				<TextBlock Text=":" Foreground="Black" VerticalAlignment="Center"></TextBlock>
 
 				<TextBox Margin="0,0,0,0" Text="{Binding PropertyValue}" Foreground="Black" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" IsVisible="{Binding IsEditable}"></TextBox>
