--- a/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
@@ -18,26 +18,56 @@
 			 PointerReleased="Node_PointerReleased">
 
 
+		<UserControl.Styles>
+			<Style Selector="TextBox:focus-within /template/ Border">
+				<Setter Property="BorderBrush" Value="{DynamicResource TransparentBrush}" />
+				<Setter Property="Background" Value="{DynamicResource TransparentBrush}" />
+				<Setter Property="CornerRadius" Value="5"/>
+				<Setter Property="BorderThickness" Value="2"></Setter>
+			</Style>
 
-
+			<Style Selector="TextBox:pointerover /template/ Border">
+				<Setter Property="Background" Value="{DynamicResource TransparentBrush}" />
+				<Setter Property="BorderBrush" Value="Black"/>
+				<Setter Property="CornerRadius" Value="5"/>
+				<Setter Property="BorderThickness" Value="2"></Setter>
+			</Style>
+		</UserControl.Styles>
+	
+		<UserControl.DataTemplates>
 			
-		<StackPanel MinWidth="200" MaxWidth="400" MaxHeight="700">			
+			<DataTemplate DataType="properties:NodePropertyText">
+				<nodedetails:NodeDetailsPropertyTextView DataContext="{Binding}"/>
+			</DataTemplate>
+			
+			<DataTemplate DataType="properties:NodePropertyCommand">
+				<nodedetails:NodeDetailsPropertyCommandView DataContext="{Binding}"/>
+			</DataTemplate>
+			
+			<DataTemplate DataType="properties:NodePropertyCompromised">
+				<nodedetails:NodeDetailsPropertyCompromisedView DataContext="{Binding}"/>
+			</DataTemplate>
+			
+			<DataTemplate DataType="properties:NodePropertyBasic">
+				<nodedetails:NodeDetailsPropertyBasicView DataContext="{Binding}"/>
+			</DataTemplate>
+		</UserControl.DataTemplates>
+			
+		<StackPanel MinWidth="200" MaxWidth="400">			
 				<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-						<TextBox Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="24" Margin="10" Background="#00000000" BorderThickness="0"></TextBox>
+						<TextBox Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="24" Margin="10" Background="#00000000" BorderBrush="#00000000" BorderThickness="2"></TextBox>
 					</StackPanel>
 				</Border>
 
 			<Border BorderBrush="#f7f7f7" BorderThickness="3" CornerRadius="0,0,5,5" >
-				<Border Margin="5" BorderBrush="#c2c2c2" CornerRadius="5" BorderThickness="1">
+				<Border Margin="5" BorderBrush="#c2c2c2" CornerRadius="5" BorderThickness="1" MaxHeight="700">
 					<ScrollViewer>
 						<StackPanel>
 							<TextBlock Margin="7,3,0,3" Text="Node Properties:" FontSize="16" FontWeight="Bold" Foreground="{StaticResource BodyTextColor}"></TextBlock>
 							<ItemsControl x:Name="ContextPath" ItemsSource="{Binding Properties}">
 								<ItemsControl.ItemTemplate>
-									<DataTemplate DataType="properties:NodePropertyBasic">
-										<nodedetails:NodeDetailsViewProperty DataContext="{Binding}"/> 
-									</DataTemplate>
+
 								</ItemsControl.ItemTemplate>
 
 								<ItemsControl.ItemsPanel>
