Added Interface propery as well as the ability for them to condense to multiinterfaceproperty in the nodeview.

--- a/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
@@ -43,6 +43,14 @@
 			<DataTemplate DataType="properties:NodePropertyCommand">
 				<nodedetails:NodeDetailsPropertyCommandView DataContext="{Binding}"/>
 			</DataTemplate>
+			
+			<DataTemplate DataType="properties:NodePropertyMultiInterface">
+			</DataTemplate>
+			
+			
+			<DataTemplate DataType="properties:NodePropertyInterface">
+				<nodedetails:NodeDetailsPropertyInterfaceView DataContext="{Binding}"/>
+			</DataTemplate>
 
 			<DataTemplate DataType="properties:NodePropertyVulnerability">
 				<nodedetails:NodeDetailsPropertyVulnerabilityView DataContext="{Binding}"/>
