--- a/Munyn/Views/Nodes/NodeDetails/Properties/DetailsView/NodeDetailsPropertyBasicView.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/Properties/DetailsView/NodeDetailsPropertyBasicView.axaml
@@ -28,9 +28,18 @@
 					<TextBlock Text="{Binding PropertyValue}" Foreground="Black" VerticalAlignment="Center" Background="Transparent" IsVisible="{Binding !IsEditable}"></TextBlock>
 
 				</StackPanel>
-				<Button Grid.Column="1" Command="{Binding DeletePropertyCommand}" VerticalAlignment="Center" Background="Transparent" HorizontalAlignment="Right" Margin="5,0,15,0">
-					<PathIcon Data="{StaticResource delete}" Width="17" Height="17" Foreground="Black"/>
-				</Button>
+				<StackPanel Grid.Column="1" Orientation="Horizontal">
+					<Button Command="{Binding ToggleGraphVisabilityCommand}" VerticalAlignment="Center" Background="Transparent">
+						<StackPanel>
+							<PathIcon Data="{StaticResource star-nofill}" Width="17" Height="17" Foreground="#fac900" IsVisible="{Binding !IsVisableOnGraphNode}"/>
+							<PathIcon Data="{StaticResource star}" Width="17" Height="17" Foreground="#fac900" IsVisible="{Binding IsVisableOnGraphNode}"/>
+						</StackPanel>
+					</Button>
+					<Button Command="{Binding DeletePropertyCommand}" VerticalAlignment="Center" Background="Transparent" HorizontalAlignment="Right" Margin="5,0,15,0">
+						<PathIcon Data="{StaticResource delete}" Width="17" Height="17" Foreground="Black"/>
+					</Button>
+				</StackPanel>
+
 			</Grid>
 		</StackPanel>
 
