--- a/Munyn/Views/Nodes/NodeView.axaml
+++ b/Munyn/Views/Nodes/NodeView.axaml
@@ -25,60 +25,64 @@
 
 
 	<Panel>
-		<StackPanel MinWidth="200" MaxWidth="250">
-			<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
-				<StackPanel Orientation="Horizontal">
-					<PathIcon Margin="5,0,0,0" Height="20" Width="20" Foreground="#f2f2f2" Data="{Binding Icon}"/>
-					<TextBlock Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="16" Margin="10"></TextBlock>
+		<Border Background="Transparent" BorderThickness="3" CornerRadius="5" BorderBrush="{Binding SelectedBorderBrush}">
+			<Border Background="Transparent" BorderThickness="3" CornerRadius="5" BorderBrush="Transparent">
+				<StackPanel MinWidth="200" MaxWidth="250">
+					<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
+						<StackPanel Orientation="Horizontal">
+							<PathIcon Margin="5,0,0,0" Height="20" Width="20" Foreground="#f2f2f2" Data="{Binding Icon}"/>
+							<TextBlock Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="16" Margin="10"></TextBlock>
+						</StackPanel>
+					</Border>
+
+
+					<!-- INFO PANEL -->
+					<Border BorderBrush="#f7f7f7" Background="#f7f7f7" BorderThickness="3" CornerRadius="0,0,5,5" >
+						<StackPanel Background="#f7f7f7">
+							<ItemsControl x:Name="PropertiesItemControl" ItemsSource="{Binding PropertiesInNodeView}" Margin="0,0,0,5">
+								<ItemsControl.DataTemplates>
+
+
+									<DataTemplate DataType="properties:NodePropertyText">
+										<nodedetails:NodeGraphPropertyTextView/>
+									</DataTemplate>
+
+									<DataTemplate DataType="properties:NodePropertyCommand">
+										<nodedetails:NodeGraphPropertyCommandView/>
+									</DataTemplate>
+
+									<DataTemplate DataType="properties:NodePropertyMultiInterface">
+										<nodedetails:NodeGraphPropertyMultiInterfaceView/>
+									</DataTemplate>
+									
+									<DataTemplate DataType="properties:NodePropertyCompromised">
+										<nodedetails:NodeGraphPropertyCompromisedView/>
+									</DataTemplate>
+
+									<DataTemplate DataType="properties:NodePropertyBasic">
+										<nodedetails:NodeGraphPropertyBasicView/>
+									</DataTemplate>
+								</ItemsControl.DataTemplates>
+
+								<ItemsControl.ItemsPanel>
+								<ItemsPanelTemplate>
+									<StackPanel MinHeight="20"></StackPanel>
+								</ItemsPanelTemplate>
+							</ItemsControl.ItemsPanel>
+						</ItemsControl>
+
+
+
+						<Button HorizontalAlignment="Center" CornerRadius="5" Margin="10,10,10,5" Command="{Binding EnterContextButtonCommand}" Background="{Binding NodeTheme}" IsVisible="{Binding IsContext}">
+							<StackPanel Orientation="Horizontal">
+								<TextBlock Text="Enter Context"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="12" Margin="5"></TextBlock>
+								<PathIcon Data="{StaticResource arrow-next-right-icon}" Width="6" Margin="0,0,5,0"/>
+							</StackPanel>
+						</Button>
+					</StackPanel>
+				</Border>
 				</StackPanel>
 			</Border>
-
-
-			<!-- INFO PANEL -->
-			<Border BorderBrush="#f7f7f7" Background="#f7f7f7" BorderThickness="3" CornerRadius="0,0,5,5" >
-				<StackPanel Background="#f7f7f7">
-					<ItemsControl x:Name="PropertiesItemControl" ItemsSource="{Binding PropertiesInNodeView}" Margin="0,0,0,5">
-						<ItemsControl.DataTemplates>
-
-
-							<DataTemplate DataType="properties:NodePropertyText">
-								<nodedetails:NodeGraphPropertyTextView/>
-							</DataTemplate>
-
-							<DataTemplate DataType="properties:NodePropertyCommand">
-								<nodedetails:NodeGraphPropertyCommandView/>
-							</DataTemplate>
-
-							<DataTemplate DataType="properties:NodePropertyMultiInterface">
-								<nodedetails:NodeGraphPropertyMultiInterfaceView/>
-							</DataTemplate>
-							
-							<DataTemplate DataType="properties:NodePropertyCompromised">
-								<nodedetails:NodeGraphPropertyCompromisedView/>
-							</DataTemplate>
-
-							<DataTemplate DataType="properties:NodePropertyBasic">
-								<nodedetails:NodeGraphPropertyBasicView/>
-							</DataTemplate>
-						</ItemsControl.DataTemplates>
-
-						<ItemsControl.ItemsPanel>
-						<ItemsPanelTemplate>
-							<StackPanel MinHeight="20"></StackPanel>
-						</ItemsPanelTemplate>
-					</ItemsControl.ItemsPanel>
-				</ItemsControl>
-
-
-
-				<Button HorizontalAlignment="Center" CornerRadius="5" Margin="10,10,10,5" Command="{Binding EnterContextButtonCommand}" Background="{Binding NodeTheme}" IsVisible="{Binding IsContext}">
-					<StackPanel Orientation="Horizontal">
-						<TextBlock Text="Enter Context"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="12" Margin="5"></TextBlock>
-						<PathIcon Data="{StaticResource arrow-next-right-icon}" Width="6" Margin="0,0,5,0"/>
-					</StackPanel>
-				</Button>
-			</StackPanel>
 		</Border>
-		</StackPanel>
 	</Panel>
 </UserControl>
