--- a/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
@@ -13,9 +13,10 @@
 			 
 			 Canvas.Left="{Binding X}"
 			 Canvas.Top="{Binding Y}"
-			 PointerPressed="Node_PointerPressed"
-			 PointerMoved="Node_PointerMoved"
-			 PointerReleased="Node_PointerReleased">
+			 
+			 PointerPressed="Details_PointerPressed"
+			 PointerMoved="Details_PointerMoved"
+			 PointerReleased="Details_PointerReleased">
 
 
 		<UserControl.Styles>
@@ -66,7 +67,7 @@
 			</DataTemplate>
 		</UserControl.DataTemplates>
 			
-		<StackPanel MinWidth="200" MaxWidth="400">			
+		<StackPanel MinWidth="200" MaxWidth="400" Focusable="True">			
 				<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 						<TextBox Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="24" Margin="10" Background="#00000000" BorderBrush="#00000000" BorderThickness="2"></TextBox>
