--- a/Munyn/Views/Nodes/NodeDetails/Properties/GraphView/NodeGraphPropertyCommandView.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/Properties/GraphView/NodeGraphPropertyCommandView.axaml
@@ -7,7 +7,7 @@
              Background="Transparent">
 
 
-	<Button Click="Property_Click" Background="Transparent" BorderThickness="0" Padding="0" Margin="0">
+	<Button Click="Property_Click" Background="Transparent" BorderThickness="0" Padding="0" Margin="0" HorizontalAlignment="Stretch">
 		<StackPanel Margin="10">
 			<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding IconColor}" Background="{Binding IconColor}">
 				<StackPanel Orientation="Horizontal" Grid.Column="0">
