--- a/Munyn/Views/Nodes/NodeView.axaml
+++ b/Munyn/Views/Nodes/NodeView.axaml
@@ -22,13 +22,28 @@
 		<SolidColorBrush x:Key="BodyText" Color="{StaticResource BodyTextColor}"/>
 	
 	</UserControl.Resources>
+	<UserControl.Styles>
+		<Style Selector="Border.CompromisedBorder">
+			<Style.Animations>
+				<Animation Duration="0:0:1" Easing="CubicEaseOut" IterationCount="Infinite" PlaybackDirection="Alternate">
+					<KeyFrame Cue="0%">
+						<Setter Property="BoxShadow" Value="0 0 10 1 Red"/>
+					</KeyFrame>
+					<KeyFrame Cue="100%">
+						<Setter Property="BoxShadow" Value="0 0 10 5 Red"/>
+					</KeyFrame>
+				</Animation>
+			</Style.Animations>
+		</Style>
+	</UserControl.Styles>
 
 
 
 	<Panel>
-		<Border Background="Transparent" BorderThickness="3" CornerRadius="5" BorderBrush="{Binding SelectedBorderBrush}">
-			<Border Background="Transparent" BorderThickness="3" CornerRadius="5" BorderBrush="Transparent">
-				<StackPanel MinWidth="200" MaxWidth="250">
+		<Border Background="Transparent"  BorderThickness="3" CornerRadius="5" BorderBrush="{Binding SelectedBorderBrush}" ZIndex="10" Margin="10">
+
+			<Border Background="Transparent" BorderThickness="3" CornerRadius="5" Padding="-2" BorderBrush="Transparent" ZIndex="-10" Classes.CompromisedBorder="{Binding IsCompromised}">
+				<StackPanel MinWidth="200" MaxWidth="250" >
 					<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
 						<StackPanel Orientation="Horizontal">
 							<PathIcon Margin="5,0,0,0" Height="20" Width="20" Foreground="#f2f2f2" Data="{Binding Icon}"/>
@@ -38,7 +53,7 @@
 
 
 					<!-- INFO PANEL -->
-					<Border BorderBrush="#f7f7f7" Background="#f7f7f7" BorderThickness="3" CornerRadius="0,0,5,5" >
+					<Border BorderBrush="#f7f7f7" Background="#f7f7f7" BorderThickness="3" CornerRadius="0,0,5,5">
 						<StackPanel Background="#f7f7f7">
 							<ItemsControl x:Name="PropertiesItemControl" ItemsSource="{Binding PropertiesInNodeView}" Margin="0,0,0,5">
 								<ItemsControl.DataTemplates>
@@ -54,10 +69,6 @@
 
 									<DataTemplate DataType="properties:NodePropertyMultiInterface">
 										<graphviews:NodeGraphPropertyMultiInterfaceView/>
-									</DataTemplate>
-									
-									<DataTemplate DataType="properties:NodePropertyCompromised">
-										<graphviews:NodeGraphPropertyCompromisedView/>
 									</DataTemplate>
 
 									<DataTemplate DataType="properties:NodePropertyBasic">
