--- a/Munyn/Views/Panels/ExtrasTray.axaml
+++ b/Munyn/Views/Panels/ExtrasTray.axaml
@@ -17,15 +17,46 @@
 			</Style>
 
 		</StackPanel.Styles>
-		
-		<Button Command="{Binding NewHostDragCommand}">
-			<PathIcon Data="{StaticResource pc-display}" Foreground="#f2f2f2" Width="45" Height="45"/>
+		<Button Command="{Binding NewLinkDragCommand}">
+			<PathIcon Data="{StaticResource link}" Foreground="#f2f2f2" Width="45" Height="45"/>
 			<Button.Background>
 				<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
-					<GradientStop Color="#5E90CE" Offset="0.0"/>
+					<GradientStop Color="#c531a5" Offset="0.0"/>
+					<GradientStop Color="#4c78ea" Offset="0.5"/>
 					<GradientStop Color="#64DFDF" Offset="1.0"/>
 				</LinearGradientBrush>
 			</Button.Background>
 		</Button>
+		<Button Command="{Binding NewNetworkDragCommand}">
+			<PathIcon Data="{StaticResource neural-network}" Foreground="#f2f2f2" Width="45" Height="45"/>
+			<Button.Background>
+				<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
+					<GradientStop Color="#c531a5" Offset="0.0"/>
+					<GradientStop Color="#4c78ea" Offset="0.5"/>
+					<GradientStop Color="#64DFDF" Offset="1.0"/>
+				</LinearGradientBrush>
+			</Button.Background>
+		</Button>
+		<Button Command="{Binding NewNetworkDragCommand}">
+			<PathIcon Data="{StaticResource neural-network}" Foreground="#f2f2f2" Width="45" Height="45"/>
+			<Button.Background>
+				<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
+					<GradientStop Color="#c531a5" Offset="0.0"/>
+					<GradientStop Color="#4c78ea" Offset="0.5"/>
+					<GradientStop Color="#64DFDF" Offset="1.0"/>
+				</LinearGradientBrush>
+			</Button.Background>
+		</Button>
+		<Button Command="{Binding NewNetworkDragCommand}">
+			<PathIcon Data="{StaticResource neural-network}" Foreground="#f2f2f2" Width="45" Height="45"/>
+			<Button.Background>
+				<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
+					<GradientStop Color="#c531a5" Offset="0.0"/>
+					<GradientStop Color="#4c78ea" Offset="0.5"/>
+					<GradientStop Color="#64DFDF" Offset="1.0"/>
+				</LinearGradientBrush>
+			</Button.Background>
+		</Button>
+
 	</StackPanel>
 </UserControl>
