--- a/Munyn/Views/MainView.axaml
+++ b/Munyn/Views/MainView.axaml
@@ -9,6 +9,7 @@
 			 xmlns:misc="clr-namespace:Munyn.Views.Misc;assembly=Munyn"
 			 xmlns:converters="clr-namespace:Munyn.Converters;assembly=Munyn"
 			 xmlns:panels="clr-namespace:Munyn.Panels;assembly=Munyn"
+			 xmlns:paths="clr-namespace:Munyn.Views.Paths;assembly=Munyn"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Munyn.Views.MainView"
              x:DataType="vm:MainViewModel"
@@ -34,7 +35,24 @@
 		</DataTemplate>
 		
 		<DataTemplate DataType="vm:PathBaseViewModel">
-			<Path Data="{Binding PathData}" Stroke="{Binding SelectedStrokeBrush}" StrokeThickness="4" PointerPressed="Path_OnPointerPressed"/>
+			<ContentControl Content="{Binding}" Tag="{Binding IsCompromised}">
+				<ContentControl.Styles>
+					<Style Selector="ContentControl[Tag=false]">
+						<Setter Property="ContentTemplate">
+							<DataTemplate>
+								<Path Data="{Binding PathData}" Stroke="{Binding StrokeBrush}" StrokeThickness="4" PointerPressed="Path_OnPointerPressed"/>
+							</DataTemplate>
+						</Setter>
+					</Style>
+					<Style Selector="ContentControl[Tag=true]">
+						<Setter Property="ContentTemplate">
+							<DataTemplate>
+								<paths:CompromisedPathView />
+							</DataTemplate>
+						</Setter>
+					</Style>
+				</ContentControl.Styles>
+			</ContentControl>
 		</DataTemplate>
 		
 	</UserControl.DataTemplates>
@@ -143,15 +161,15 @@
 
 
 					<Button Command="{Binding SaveToLastFileCommand}">
-						<PathIcon Data="{StaticResource save-icon}" Width="20" Foreground="#f2f2f2"/>
+						<PathIcon Data="{StaticResource save}" Width="20" Foreground="#f2f2f2"/>
 					</Button>
 					<Button Command="{Binding SaveAsCommand}">
-						<PathIcon Data="{StaticResource save-arrow}" Width="20" Foreground="#f2f2f2"/>
+						<PathIcon Data="{StaticResource save-as}" Width="20" Foreground="#f2f2f2"/>
 					</Button>
 					<Button Command="{Binding LoadCommand}">
 						<PathIcon Data="{StaticResource open}" Width="20" Foreground="#f2f2f2"/>
 					</Button>
-					<TextBlock Grid.Column="0" Text="{Binding LoadedFileName}" FontSize="16" Margin="10,0,15,0" VerticalAlignment="Center"/>
+					<TextBlock Grid.Column="0" Foreground="#f2f2f2" Text="{Binding LoadedFileName}" FontSize="16" Margin="10,0,15,0" VerticalAlignment="Center"/>
 				</StackPanel>
 			</Grid>
 
