--- a/Munyn/Views/Panels/ExtrasTray.axaml
+++ b/Munyn/Views/Panels/ExtrasTray.axaml
@@ -17,7 +17,9 @@
 			</Style>
 
 		</StackPanel.Styles>
+
 		<Button Command="{Binding NewLinkDragCommand}">
+
 			<PathIcon Data="{StaticResource link}" Foreground="#f2f2f2" Width="45" Height="45"/>
 			<Button.Background>
 				<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
@@ -27,8 +29,9 @@
 				</LinearGradientBrush>
 			</Button.Background>
 		</Button>
-		<Button Command="{Binding NewNetworkDragCommand}">
-			<PathIcon Data="{StaticResource neural-network}" Foreground="#f2f2f2" Width="45" Height="45"/>
+		<!-- Leaf Node -->
+		<Button Command="{Binding NewHostDragCommand}">
+			<PathIcon Data="{StaticResource tree-view}" Foreground="#f2f2f2" Width="45" Height="45"/>
 			<Button.Background>
 				<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
 					<GradientStop Color="#c531a5" Offset="0.0"/>
@@ -37,8 +40,9 @@
 				</LinearGradientBrush>
 			</Button.Background>
 		</Button>
-		<Button Command="{Binding NewNetworkDragCommand}">
-			<PathIcon Data="{StaticResource neural-network}" Foreground="#f2f2f2" Width="45" Height="45"/>
+		<!-- Blank Node-->
+		<Button Command="{Binding NewHostDragCommand}">
+			<PathIcon Data="{StaticResource edit}" Foreground="#f2f2f2" Width="45" Height="45"/>
 			<Button.Background>
 				<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
 					<GradientStop Color="#c531a5" Offset="0.0"/>
@@ -47,8 +51,9 @@
 				</LinearGradientBrush>
 			</Button.Background>
 		</Button>
-		<Button Command="{Binding NewNetworkDragCommand}">
-			<PathIcon Data="{StaticResource neural-network}" Foreground="#f2f2f2" Width="45" Height="45"/>
+		<!-- Blank Context-->
+		<Button Command="{Binding NewHostDragCommand}">
+			<PathIcon Data="{StaticResource container-software}" Foreground="#f2f2f2" Width="45" Height="45"/>
 			<Button.Background>
 				<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
 					<GradientStop Color="#c531a5" Offset="0.0"/>
@@ -57,6 +62,7 @@
 				</LinearGradientBrush>
 			</Button.Background>
 		</Button>
+		
 
 	</StackPanel>
 </UserControl>
