--- a/Munyn/Views/Nodes/NodeView.axaml
+++ b/Munyn/Views/Nodes/NodeView.axaml
@@ -40,7 +40,8 @@
 
 
 	<Panel>
-		<Border Background="Transparent"  BorderThickness="3" CornerRadius="5" BorderBrush="{Binding SelectedBorderBrush}" ZIndex="10" Margin="10">
+		<!-- Contains Properties !-->
+		<Border Background="Transparent" IsVisible="{Binding !NoGraphProperties}" BorderThickness="3" CornerRadius="5" BorderBrush="{Binding SelectedBorderBrush}" ZIndex="10" Margin="10">
 
 			<Border Background="Transparent" BorderThickness="3" CornerRadius="5" Padding="-2" BorderBrush="Transparent" ZIndex="-10" Classes.CompromisedBorder="{Binding IsCompromised}">
 				<StackPanel MinWidth="200" MaxWidth="250" >
@@ -93,6 +94,34 @@
 						</Button>
 					</StackPanel>
 				</Border>
+				</StackPanel>
+			</Border>
+		</Border>
+
+
+
+
+		<Border Background="Transparent" IsVisible="{Binding NoGraphProperties}" BorderThickness="3" CornerRadius="5" BorderBrush="{Binding SelectedBorderBrush}" ZIndex="10" Margin="10">
+
+			<Border Background="Transparent" BorderThickness="3" CornerRadius="5" Padding="-2" BorderBrush="Transparent" ZIndex="-10" Classes.CompromisedBorder="{Binding IsCompromised}">
+				<StackPanel MinWidth="200" MaxWidth="250" >
+					<Border BorderThickness="3" CornerRadius="5" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
+						<StackPanel Orientation="Horizontal">
+							<PathIcon Margin="5,0,0,0" Height="20" Width="20" Foreground="#f2f2f2" Data="{Binding Icon}"/>
+							<TextBlock Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="16" Margin="10"></TextBlock>
+						</StackPanel>
+					</Border>
+
+
+					<!-- INFO PANEL -->
+					<Border BorderBrush="#f7f7f7" Background="#f7f7f7" BorderThickness="3" CornerRadius="0,0,5,5" IsVisible="{Binding IsContext}">
+						<Button HorizontalAlignment="Center" CornerRadius="5" Margin="10,10,10,5" Command="{Binding EnterContextButtonCommand}" Background="{Binding NodeTheme}">
+							<StackPanel Orientation="Horizontal">
+								<TextBlock Text="Enter Context"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="12" Margin="5"></TextBlock>
+								<PathIcon Data="{StaticResource arrow-next-right-icon}" Width="6" Margin="0,0,5,0"/>
+							</StackPanel>
+						</Button>
+					</Border>
 				</StackPanel>
 			</Border>
 		</Border>
